@@ -1298,6 +1298,7 @@ unsigned long long CSQLHelper::UpdateValue(const int HardwareID, const char* ID,
 	case pTypeLimitlessLights:
 	case pTypeSecurity1:
 	case pTypeBlinds:
+	case pTypeThermostat3:
 		bIsLightSwitch=true;
 		break;
 	}
@@ -1383,6 +1384,9 @@ unsigned long long CSQLHelper::UpdateValue(const int HardwareID, const char* ID,
 					case pTypeBlinds:
 						newnValue=blinds_sOpen;
 						break;
+					case pTypeThermostat3:
+						newnValue=thermostat3_sOff;
+						break;
 					default:
 						continue;
 					}
@@ -1441,6 +1445,9 @@ unsigned long long CSQLHelper::UpdateValue(const int HardwareID, const char* ID,
 				break;
 			case pTypeBlinds:
 				newnValue=blinds_sOpen;
+				break;
+			case pTypeThermostat3:
+				newnValue=thermostat3_sOff;
 				break;
 			default:
 				continue;
@@ -1533,6 +1540,7 @@ unsigned long long CSQLHelper::UpdateValueInt(const int HardwareID, const char* 
 	case pTypeSecurity1:
 	case pTypeBlinds:
 	case pTypeChime:
+	case pTypeThermostat3:
 		//Add Lighting log
 		m_LastSwitchID=ID;
 		m_LastSwitchRowID=ulID;
@@ -5435,7 +5443,7 @@ void CSQLHelper::CheckDeviceTimeout()
 	std::vector<std::vector<std::string> > result;
 	char szTmp[300];
 	sprintf(szTmp,
-		"SELECT ID,Name,LastUpdate FROM DeviceStatus WHERE (Used!=0 AND LastUpdate<='%04d-%02d-%02d %02d:%02d:%02d' AND Type!=%d AND Type!=%d AND Type!=%d AND Type!=%d AND Type!=%d AND Type!=%d AND Type!=%d AND Type!=%d AND Type!=%d AND Type!=%d) ORDER BY Name",
+		"SELECT ID,Name,LastUpdate FROM DeviceStatus WHERE (Used!=0 AND LastUpdate<='%04d-%02d-%02d %02d:%02d:%02d' AND Type!=%d AND Type!=%d AND Type!=%d AND Type!=%d AND Type!=%d AND Type!=%d AND Type!=%d AND Type!=%d AND Type!=%d AND Type!=%d AND Type!=%d) ORDER BY Name",
 		ltime.tm_year+1900,ltime.tm_mon+1, ltime.tm_mday, ltime.tm_hour, ltime.tm_min, ltime.tm_sec,
 		pTypeLighting1,
 		pTypeLighting2,
@@ -5446,7 +5454,8 @@ void CSQLHelper::CheckDeviceTimeout()
 		pTypeLimitlessLights,
 		pTypeSecurity1,
 		pTypeBlinds,
-		pTypeChime
+		pTypeChime,
+		pTypeThermostat3
 		);
 	result=query(szTmp);
 	if (result.size()<1)
